Re-design; created swash-sim class to deal with paths; about to delete redundant files post- and preprocessing.py

--- a/tidal-basin/tidal_basin_base.jinja
+++ b/tidal-basin/tidal_basin_base.jinja
@@ -33,7 +33,7 @@ CGRID 0. 0. 0. {{ sim.basinlenght }} 0. {{ sim.xm }} 0
 ! ## Define input grid bottom
 ! ## origin (x,y,rotation) xm, ym, xlenght, ylenght 
 INPGRID BOTTOM 0. 0. 0. 1 0 10000. 0. 
-READGRID BOTTOM 1. '{{ sim.botfname }}' 1 0 FREE
+READGRID BOTTOM 1. '{{ sim.fname_bottom }}' 1 0 FREE
 !
 !   INPgrid  BOT|WLEV|CUR|VX|VY|FRic|WInd|WX|WY|PRessure|POROS|PSIZ|HSTRUC|    &
 !            NPLAnts|FLOAT|SALinity|TEMPerature|SEDiment                       &
